test/files/neg/bug1183.check
bug1183.scala:6: error: name clash: class Foo defines object Baz
and its companion object Foo also defines class Baz
    object Baz
           ^
bug1183.scala:7: error: name clash: class Foo defines class Bam
and its companion object Foo also defines object Bam
    class Bam
          ^
bug1183.scala:8: error: name clash: class Foo defines object Bar
and its companion object Foo also defines class Bar
    object Bar
           ^
bug1183.scala:9: error: name clash: class Foo defines class Bar
and its companion object Foo also defines class Bar
    case class Bar(i:Int)
               ^
four errors found
